# ClinMetML

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
clinmetml/: __init__.py  cli.py
clinmetml/core/: __init__.py  data_cleaner.py  dca.py  feature_selector.py  interpretability_analyzer.py  model_persistence.py  model_trainer.py  multicollinearity_reducer.py  rfe_selector.py
clinmetml/pipeline/: __init__.py  auto_pipeline.py
clinmetml/utils/: __init__.py  paths.py
examples/: basic_usage.py  step_by_step_usage.py
tests/: test_autometabo_pipeline_steps.py  test_dca_standalone.py
