[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinmetml"
version = "0.1.0"
description = "Automated Metabolomics Biomarker Discovery and Predictive Modeling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

keywords = [
    "metabolomics", 
    "biomarker", 
    "machine-learning", 
    "automated-ml", 
    "feature-selection",
    "bioinformatics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.13.0",
    "imbalanced-learn>=0.8.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "rich>=10.0.0",
    "tqdm>=4.62.0",
    "joblib>=1.1.0",
    "plotly>=5.0.0",
    "shap>=0.40.0",

    # Advanced feature selection methods (strong dependencies so all methods
    # are available after a normal pip install)
    "Cython>=0.29.0",
    "pymrmr>=0.1.0",
    "skrebate>=0.62",
]

[project.optional-dependencies]
deep-learning = [
    "torch>=1.10.0",
    "pytorch-tabular>=1.0.0",
    "pytorch-lightning>=1.5.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "ruff>=0.0.260",
    "mypy>=0.950",
    "pre-commit>=2.15.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.17",
]
all = [
    "clinmetml[deep-learning,dev,docs]"
]

[project.urls]
Homepage = "https://github.com/your-username/clinmetml"
Documentation = "https://clinmetml.readthedocs.io"
Repository = "https://github.com/your-username/clinmetml.git"
"Bug Tracker" = "https://github.com/your-username/clinmetml/issues"
Changelog = "https://github.com/your-username/clinmetml/blob/main/CHANGELOG.md"

[project.scripts]
clinmetml = "clinmetml.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clinmetml*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
clinmetml = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
